Fix #21336 - [Bug] Reverse order of ingredients