@@ -620,16 +620,16 @@ public class IngsCalculatingFormulationHandler extends FormulationBaseHandler<Pr
 			int i = 1;
 
 			byParent.getOrDefault(nullPlaceholder, Collections.emptyList()).stream().sorted(Comparator
-					.comparing(IngListDataItem::getQtyPerc, Comparator.nullsFirst(Comparator.naturalOrder())).thenComparing(this::getLegaleName))
-					.collect(Collectors.toList()).forEach(processor::add);
+					.comparing(IngListDataItem::getQtyPerc, Comparator.nullsFirst(Comparator.naturalOrder())).thenComparing(Comparator.comparing(this::getLegaleName).reversed()))
+					.toList().forEach(processor::add);
 
 			while (!processor.isEmpty()) {
 				i++;
 				IngListDataItem il = processor.removeLast();
 				byParent.getOrDefault(il, Collections.emptyList()).stream()
 						.sorted(Comparator.comparing(IngListDataItem::getQtyPerc, Comparator.nullsFirst(Comparator.naturalOrder()))
-								.thenComparing(this::getLegaleName))
-						.collect(Collectors.toList()).forEach(processor::add);
+								.thenComparing(Comparator.comparing(this::getLegaleName).reversed()))
+						.toList().forEach(processor::add);
 
 				il.setSort(i);
 
